# sl_nn_dynamics_roach

./: .gitignore  CMakeLists.txt  README.md  README.txt  callbackFunc_multi.py  camera.launch  camera.py  command.py  compute_action.py  controller_class.py  controller_class_playback.py  dynamics_model.py  empirical_compute_action_time.txt  feedforward_network.py  feedforward_network_camera.py  feedforward_network_live_camera.py  feedforward_network_one_hot.py  notes.txt  package.xml  shared_multi.py  test_camera_publisher.py  trajectories.py  utils.py  velociroach.py
msg/: velroach_msg.msg
plotting/: compare  plot_forwardsim.ipynb
plotting/.ipynb_checkpoints/: plot_forwardsim-checkpoint.ipynb  telem-checkpoint.ipynb
plotting/paper_plots/: action_abstractions.py  bargraph.py  cost_vs_speed.py  moving_distance.py  numdata.py  table.py
plotting/telemPlotting/: telem.ipynb  telemtry.ipynb
saved_models/camera/: model_aggIter0.ckpt.data-00000-of-00001  model_aggIter0.ckpt.index
saved_models/camera_no_xy/: model_aggIter0.ckpt.data-00000-of-00001  model_aggIter0.ckpt.index
saved_models/carpet/: model_aggIter0.ckpt.data-00000-of-00001  (+1 more)
scripts/: automated_data_collect.py  calculate_traj_cost.py  confirm_freeze_alexnet.py  diff_drive_controller.py  empirical_kh_costs.npy  get_roach_telemetry.py  images.npy  mjo.py  myalexnet_forward.py  myalexnet_forward_newtf.py  mytests.py  paper_calcCosts.py  roach_images.py  run_kh_test.py  run_kh_test2.py  stop_roach.py  test_live_camera.py  time_fp.py  train_dynamics.py  tune_hyperparam.py  zumy_diffDrive.py
(+71 files in other folders)
